[gd_scene load_steps=59 format=3 uid="uid://cs54gtqjl7w04"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_yhjnc"]
[ext_resource type="PackedScene" uid="uid://0cpl2rpesd6g" path="res://Scenes/ray_bullet.tscn" id="2_xrqw0"]
[ext_resource type="PackedScene" uid="uid://daimqttudgmua" path="res://Scenes/charged_bullet.tscn" id="3_a2rjl"]
[ext_resource type="Texture2D" uid="uid://b7ia83m633ntk" path="res://Sprites/Fire.png" id="3_re7cf"]
[ext_resource type="Texture2D" uid="uid://csmok7ypomy8t" path="res://Sprites/DeathExplosion.png" id="4_3hf3u"]
[ext_resource type="Texture2D" uid="uid://bs4ub3djl3pnt" path="res://Sprites/PlayerShip.png" id="5_1skne"]
[ext_resource type="Texture2D" uid="uid://ctqtx5anykylr" path="res://Sprites/ShootingPoint.png" id="6_2nw2w"]
[ext_resource type="PackedScene" uid="uid://ci5cruvwm24uh" path="res://Scenes/hurtbox.tscn" id="7_hf7ov"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ja2jr"]
atlas = ExtResource("3_re7cf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2vep"]
atlas = ExtResource("3_re7cf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sgi4"]
atlas = ExtResource("3_re7cf")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cctx"]
atlas = ExtResource("3_re7cf")
region = Rect2(64, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_iqx7u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja2jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2vep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sgi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cctx")
}],
"loop": true,
"name": &"Fire",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_hbf7a"]
atlas = ExtResource("5_1skne")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqtsf"]
atlas = ExtResource("5_1skne")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wresw"]
atlas = ExtResource("5_1skne")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxpat"]
atlas = ExtResource("5_1skne")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj5op"]
atlas = ExtResource("5_1skne")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sajm5"]
atlas = ExtResource("5_1skne")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyarp"]
atlas = ExtResource("5_1skne")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcj3o"]
atlas = ExtResource("5_1skne")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8m2i"]
atlas = ExtResource("4_3hf3u")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn8aw"]
atlas = ExtResource("4_3hf3u")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pndp1"]
atlas = ExtResource("4_3hf3u")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eadpp"]
atlas = ExtResource("4_3hf3u")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev3bi"]
atlas = ExtResource("4_3hf3u")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_udji3"]
atlas = ExtResource("4_3hf3u")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r2i1"]
atlas = ExtResource("4_3hf3u")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jujn6"]
atlas = ExtResource("4_3hf3u")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3vy7"]
atlas = ExtResource("4_3hf3u")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngbeu"]
atlas = ExtResource("5_1skne")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt2gb"]
atlas = ExtResource("5_1skne")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cs7q"]
atlas = ExtResource("5_1skne")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_htb4b"]
atlas = ExtResource("5_1skne")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ochge"]
atlas = ExtResource("5_1skne")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8rhs"]
atlas = ExtResource("5_1skne")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2106"]
atlas = ExtResource("5_1skne")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_b5brv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbf7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbf7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqtsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqtsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbf7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbf7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqtsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqtsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbf7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbf7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqtsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqtsf")
}],
"loop": false,
"name": &"AfterHurt",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wresw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxpat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj5op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxpat")
}],
"loop": true,
"name": &"Charging1",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sajm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcj3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyarp")
}],
"loop": true,
"name": &"Charging2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8m2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn8aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pndp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eadpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev3bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udji3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r2i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jujn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3vy7")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Death",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngbeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt2gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cs7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htb4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ochge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8rhs")
}],
"loop": false,
"name": &"Hurt",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2106")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ktfgs"]
atlas = ExtResource("6_2nw2w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tivh"]
atlas = ExtResource("6_2nw2w")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7c10"]
atlas = ExtResource("6_2nw2w")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7qbm"]
atlas = ExtResource("6_2nw2w")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwt4q"]
atlas = ExtResource("6_2nw2w")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opll0"]
atlas = ExtResource("6_2nw2w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmjg4"]
atlas = ExtResource("6_2nw2w")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5as5h"]
atlas = ExtResource("6_2nw2w")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jek77"]
atlas = ExtResource("6_2nw2w")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyo5b"]
atlas = ExtResource("6_2nw2w")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ubcu"]
atlas = ExtResource("6_2nw2w")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0jyt"]
atlas = ExtResource("6_2nw2w")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xhii"]
atlas = ExtResource("6_2nw2w")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvx7g"]
atlas = ExtResource("6_2nw2w")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68km1"]
atlas = ExtResource("6_2nw2w")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6o74"]
atlas = ExtResource("6_2nw2w")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3jgq"]
atlas = ExtResource("6_2nw2w")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4njy"]
atlas = ExtResource("6_2nw2w")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1jlni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktfgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tivh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7c10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7qbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwt4q")
}],
"loop": true,
"name": &"Charge1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opll0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmjg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5as5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jek77")
}],
"loop": true,
"name": &"Charge2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyo5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ubcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0jyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xhii")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Fire1",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvx7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68km1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6o74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3jgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4njy")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Fire2",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7bsch"]
radius = 5.0
height = 20.0

[node name="Player" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_yhjnc")
moving_speed = 7.0
delay_time = 0.1
regular_blt_sc = ExtResource("2_xrqw0")
charged_blt_sc = ExtResource("3_a2rjl")

[node name="Fire" type="AnimatedSprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_iqx7u")
animation = &"Fire"
autoplay = "Idle"
frame = 1
frame_progress = 0.174368

[node name="BulletPosition1" type="Node2D" parent="."]
position = Vector2(-9.5, -2)

[node name="BulletPosition2" type="Node2D" parent="."]
position = Vector2(9.5, -2)

[node name="ShipSprite" type="AnimatedSprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_b5brv")
animation = &"Idle"
autoplay = "Idle"

[node name="Shooting" type="AnimatedSprite2D" parent="."]
self_modulate = Color(2, 2, 2, 1)
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_1jlni")
animation = &"Fire2"
autoplay = "Idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -5)
polygon = PackedVector2Array(0, -12.5, 14, 14, -14, 14)

[node name="Hurtbox" parent="." instance=ExtResource("7_hf7ov")]
position = Vector2(0, 1)
collision_layer = 1
collision_mask = 3
life = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_7bsch")
debug_color = Color(0, 0.6, 0.701961, 0.627451)

[node name="DeathTimer" type="Timer" parent="Hurtbox"]
wait_time = 0.6
one_shot = true

[node name="RotationDelay" type="Timer" parent="."]
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -280)

[connection signal="death" from="Hurtbox" to="." method="_on_death"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurt"]
[connection signal="timeout" from="Hurtbox/DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="RotationDelay" to="." method="_on_rotation_delay_timeout"]
